--- a/css/styles.css
+++ b/css/styles.css
@@ -335,13 +335,13 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-content-label:hover .modal-content-input,
-.modal-content-label:focus .modal-content-input {
+.modal-content-input:hover,
+.modal-content-input:focus {
   border-color: var(--accent-color);
 }
 
-.modal-content-label:hover .modal-content-icon,
-.modal-content-label:focus .modal-content-icon {
+.modal-content-input:hover + .modal-content-icon,
+.modal-content-input:focus + .modal-content-icon {
   fill: var(--accent-color);
 }
 
@@ -407,6 +407,8 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-submit:hover,
