--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,14 @@ img {
   padding: 12px 16px;
 }
 
+#modal-content-comment::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
 .modal-cheked-label {
   width: 100%;
   margin-top: 20px;
